Fix build with Qt 5.14 RC

Add needed Qt includes that are no longer pulled transitively.

BUG: 414492

Differential Revision: https://phabricator.kde.org/D25783